--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
    <section class="homepage">
+     <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
+     <h1 class="form-header">Get Tickets Now</h1>
+     <form class="register-form">
+      <input text="submit">
+      <input type="submit">
 
+     </form>
    </section>
   </body>
 </html>
