working on form before lunch break

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
    <section class="homepage">
      <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
-     <h1 class="form-header">Get Tickets Now</h1>
      <form class="register-form">
-      <input text="submit">
-      <input type="submit">
+       <h1 class="form-header">Get Tickets Now</h1>
+      <input text="text">
+      <input type="submit" value='register'>
 
      </form>
    </section>
