improved spacing on logo and form

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
    <section class="homepage">
      <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
      <form class="register-form">
-       <h1 class="form-header">Get Tickets Now</h1>
-      <input text="text">
+       <h1 class="form-header"> Get udates about ticket sales</h1>
+      <input text="text" placeholder="Enter Email to register for ticket updates">
       <input type="submit" value='register'>
-
      </form>
    </section>
   </body>
