--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
    <section class="homepage">
      <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
-     <form class="register-form">
-       <h1 class="form-header"> Get udates about ticket sales</h1>
+     <form class="register-form" action="complete.html" method="get">
+       <h1 class="form-header"> Get updates about ticket sales</h1>
       <input text="text" placeholder="Enter Email to register for ticket updates">
       <input type="submit" value='register'>
      </form>
