--- a/complete.html
+++ b/complete.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="anime.css">
+    <link rel="stylesheet" href="main.css"
   </head>
   <body>
    <section class="homepage">
      <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
      <form class="register-form" action="complete.html" method="get">
-       <h1 class="form-header fade-in-up"> Thank You for registering!</h1>
+       <h1 class="form-header"> Thank You for registering!</h1>
 
       <input text="text" placeholder="Enter Email to register for ticket updates">
       <input type="submit" value='register'>
