--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <section class="homepage">
      <img class="logo"src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
      <form class="register-form" action="complete.html" method="get">
-       <h1 class="form-header fade-in-up"> Thank You for registering!</h1>
+       <h1 class="form-header fade-in-up">Thank You for registering!</h1>
 
-      <input text="text" placeholder="Enter Email to register for ticket updates">
+      <input text="text" name= "name" placeholder="Enter Email to register for ticket updates">
       <input type="submit" value='register'>
      </form>
    </section>
